--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Extreme tech training project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "tech",
@@ -20,6 +21,7 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "jade": "^1.11.0",
+    "mongoose": "^4.1.10",
     "morgan": "^1.6.1",
     "stylus": "^0.52.4"
   }
